<resources>
    <string name="app_name">JustDoIt</string>

    <string name="unKnownError">Unknown Error! Try Again Later!</string>
    <string name="error_operation_failed">Operation Failed, Please Try Again!</string>
    <string name="task_save_fail">Error When Saving Task, Please Try Again</string>
    <string name="task_update_fail">Error When Updating Task, Please Try Again</string>
    <string name="task_delete_fail">Error When Deleting Task, Please Try Again</string>
    <string name="completed_tasks_delete_success">All Completed Tasks Are Deleted!</string>
    <string name="completed_tasks_delete_fail">Error When Deleting Completed Tasks, Please Try Again!</string>
    <string name="category_save_success">New List is Saved</string>
    <string name="category_delete_success">List Deleted</string>
    <string name="category_save_fail">Error When Saving list, Please Try Again!</string>
    <string name="category_update_fail">Error when Updating list, Please Try Again!</string>
    <string name="category_delete_fail">Error When Deleting list, Please Try Again!</string>
    <string name="category_update_name_fail">Error When Updating List Name!, Try Again!</string>
    <string name="categories_fetch_error">Unknown Error When Fetching Your Categories, Please Try Again Later!</string>

    <string name="desc_add_new_task">add new task</string>
    <string name="hint_task_detail">Add Details</string>
    <string name="hint_task_title">Title</string>
    <string name="label_action_rename_list">Rename category</string>
    <string name="label_action_delete_list">Delete category</string>
    <string name="label_action_delete_all_completed_tasks">Delete all completed tasks</string>
    <string name="label_warning_delete_default_list">(you can\'t delete default list!)</string>
    <string name="label_tab_active">To Do</string>
    <string name="label_tab_completed">Completed</string>
    <string name="label_save">Save</string>
    <string name="label_move_task_to">move task to</string>
    <string name="label_create_a_new_list">Create a new category</string>
    <string name="label_task_uncompleted">Mark as UnCompleted</string>
    <string name="label_task_completed">Mark as Completed</string>
    <string name="label_confirmation_title">Are you sure?</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_yes">Yes!</string>
    <string name="label_no_due_date">No date</string>
    <string name="label_overdue">Overdue</string>
    <string name="label_active">Active</string>
    <string name="label_mark_uncompleted">Mark as uncompleted</string>
    <string name="label_mark_completed">Mark as completed</string>
    <string name="label_setting">Setting</string>
    <string name="label_categories">Categories</string>
    <string name="label_delete">Delete</string>
    <string name="label_edit">Edit</string>
    <string name="label_default">(Default)</string>
    <string name="label_no_repeat">No repeat</string>
    <string name="label_repeat_value_param">Repeat every %1$s</string>
    <string name="desc_category_menu">Category Menu</string>
    <string name="desc_icon_repeat">Icon Repeat Indicator</string>
    <string name="desc_clear_input">Clear Input</string>
    <string name="hint_input_new_task">Input new task here</string>
    <string name="hint_input_new_category">Input new category here</string>
    <string name="desc_rename_category">Rename Category</string>
    <string name="desc_delete_completed_tasks">Delete All Completed Tasks</string>
    <string name="category_error_length">Max length of category name is 50</string>
    <string name="label_all_day">All Day</string>
    <string name="label_add_date">Due Date</string>
    <string name="label_add_time">Time</string>
    <string name="label_repeat_task">Repeat Task</string>
    <string name="label_sort_default">Default</string>
    <string name="label_sort_name">Name</string>
    <string name="label_sort_title">Sort By</string>
    <string name="desc_categories_sort_order">Categories Sort Order</string>
    <string name="label_sort_date">Date</string>
    <string name="label_asc">Ascending</string>
    <string name="label_desc">Descending</string>
    <string name="label_sort_by">Sort by</string>
    <string name="label_order">Order</string>
    <string name="label_empty_page">Nothing to do! Click + to add new task.</string>
    <string name="desc_no_tasks">Image Doing Tasks</string>
    <string name="desc_sort_tasks">Icon Sort Tasks</string>
    <string name="desc_sort_order_tasks">Icon Sort Order Tasks</string>
    <string name="label_just_doit">Just Do It !</string>
    <string name="label_delete_all">Delete All</string>
    <string name="label_move_to">Move To</string>
    <string name="desc_delete_all">Delete All Selected Tasks</string>
    <string name="desc_move_to">Move All Selected Tasks to another category</string>
    <string name="success_delete_all_operation">All Selected Task Deleted Successefuly</string>
    <string name="error_review">Please Try Again!</string>
    <string name="success_review">Thank You for reviewing the app.</string>
    <string name="desc_icon_add_date">Add Date</string>
    <string name="desc_icon_add_time">Add Time</string>
    <string name="desc_clear_datetime">Clear Date and Time</string>
    <string name="lable_selectdate">Select Date</string>
    <string name="label_selecttime">Select Time</string>
    <plurals name="day">
        <item quantity="one"> %s day</item>
        <item quantity="other"> %s days</item>
    </plurals>
    <plurals name="week">
        <item quantity="one"> %s week</item>
        <item quantity="other"> %s weeks</item>
    </plurals>
    <plurals name="month">
        <item quantity="one"> %s month</item>
        <item quantity="other"> %s months</item>
    </plurals>
    <plurals name="year">
        <item quantity="one"> %s year</item>
        <item quantity="other"> %s years</item>
    </plurals>

</resources>